[package]
name = "my-mission-app"
description = "Example Kubos mission app written in Rust"
version = "0.1.0"
authors = ["Joey Territo <jtt9340@rit.edu>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
kubos-app = { path = "../../apis/app-api/rust" }
getopts = "0.2"
log = "0.4.0"
